fix jira and write specs

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -119,7 +119,11 @@ h3 a
 
 .rate
   color: #f9d55a
-  background-color: #fcf8e3
+  background-color: #9a71a6
+  border-radius: 5px
+  padding: 2px 5px
+  margin: 4px 1px
+  display: inline
 
 .spacing-left
   margin-left: 30px
@@ -266,6 +270,9 @@ a
   line-height: 11px
 
 .annotation
+  h4
+    max-height: 40px
+    overflow: hidden
   border: 1px solid rgba(0, 0, 0, 0.2)
   border-radius: 6px
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
@@ -316,16 +323,16 @@ a
 
 .margin-bottom
   margin-bottom: 10px
-      
+
 .home .collection img
   max-height: 130px
   min-height: 130px
   over-flow: hidden
-  
+
 .clip
   position: absolute
-  clip: rect (0px, 110px, 140px, 0px)      
-
+  clip: rect(0px, 110px, 140px, 0px)
+  
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
 // This is the default Tooltipster theme (feel free to modify or duplicate and create multiple themes!):
