--- a/app/views/books/_read.html.haml
+++ b/app/views/books/_read.html.haml
@@ -1,7 +1,17 @@
+.row.clearfix
+  .col-md-12.column
+    %h3
+      =@page_title
+  - if logged_in?
+    %ul.fa-ul.tools
+      %li
+        %i.fa.fa-plus-square{:style => "position: relative"}
+        %small
+          %a{:href => "#", :id => "opener_#{@number}",:style => "position: relative"}
+            =I18n.t(:read_page_add_collection)
+          - @addbookvol = params[:id] 
+          =render :partial => "books/add_book"
+      
 -url = (DAR_JAR_API_URL.sub DAR_JAR_API_URL_STRING, params[:id]).sub DAR_JAR_API_URL_LANGUAGE, I18n.locale.to_s
 %iframe{:frameborder => "0", :height => "700", :scrolling => "no", :style => "border:0px", :width => "980", :src => "#{url}"}
-- if logged_in?
-  - @place = "details"
-  - @number = 0
-  - @addbookvol = params[:id]
-  = render :partial => "books/add_book"
+
