--- a/app/views/users/_history.html.haml
+++ b/app/views/users/_history.html.haml
@@ -1,66 +1,70 @@
-.col-md-8.column
-  %h4
-    = I18n.t(:user_history_title)
-    %span.badge
-      = @total_number
-  %hr
-  -@history.each do |item|
-    - @vol = Volume.find_by_id(item.volume)
-    :javascript
-      $(document).ready(function(){
-        $("#starsidelink_#{@vol[:job_id]}").jRating({
-          isDisabled : true
+- if @total_number > 0
+  .col-md-8.column
+    %h4
+      = I18n.t(:user_history_title)
+      %span.badge
+        = @total_number
+    %hr
+    -@history.each do |item|
+      - @vol = Volume.find_by_id(item.volume)
+      :javascript
+        $(document).ready(function(){
+          $("#starsidelink_#{@vol[:job_id]}").jRating({
+            isDisabled : true
+          });
         });
-      });
-    - @book = solr_search("vol_jobid:#{@vol.job_id}","bok_title, views, rate")
-    - if(@vol[:get_thumbnail_fail] == 0)
-      - @thumb = "volumes/#{@vol[:job_id]}/thumb.jpg"
-    - else
-      - @thumb = "images_#{I18n.locale}/book_thumb.png"
-    .row
-      .col-md-2
-        = link_to image_tag("/#{@thumb}") , {:controller => :books, :action => :show, :id => @vol.job_id, :tab => "detail"}
-      .col-md-7
-        %h4
-          = link_to "#{@book[:bok_title][0]}", {:controller => :books, :action => :show, :id => @vol.job_id, :tab => "detail"}
-        .date.text-muted
-          %small
-            %b
-              = I18n.t(:user_history_viewed_on)
-            = item.updated_at 
-      .col-md-3.controls
-        
-        
-        %ul.fa-ul.tools
-          - if (item.user_id == session[:user_id])
-            %li
-              %i.fa.fa-li.fa-trash-o
-              %small
-                = link_to I18n.t(:delete), {:controller => :user_search_history, :action => :remove_book_history, :volume_id => @vol[:id],
-                   :user_id => item[:user_id],:id => item.id, :page => @page},
-                   :onclick => "return confirmDelete(\"#{I18n.t(:remove_book_from_history_confirm)}\")"
-          %li
-            %i.fa.fa-li.fa-book
+      - @book = solr_search("vol_jobid:#{@vol.job_id}","bok_title, views, rate")
+      - if(@vol[:get_thumbnail_fail] == 0)
+        - @thumb = "volumes/#{@vol[:job_id]}/thumb.jpg"
+      - else
+        - @thumb = "images_#{I18n.locale}/book_thumb.png"
+      .row
+        .col-md-2
+          = link_to image_tag("/#{@thumb}") , {:controller => :books, :action => :show, :id => @vol.job_id, :tab => nil}
+        .col-md-7
+          %h4
+            = link_to "#{@book[:bok_title][0]}", {:controller => :books, :action => :show, :id => @vol.job_id, :tab => nil}
+          .date.text-muted
             %small
-              = link_to "#{I18n.t(:book_details_read)}" ,
-                {:controller => :books, :action => :show, :id => @vol.job_id, :tab => "read"}
-          %li
-            %i.fa.fa-li.fa-info
-            %small
-              = link_to "#{I18n.t(:book_details_details)}" , 
-                {:controller => :books, :action => :show, :id => @vol.job_id, :tab => "detail"}    
-        .rate
-          %span.text-muted.pull-right
-            %small
-            = "#{pluralize(@book[:views], I18n.t(:sidelinks_views))} "
-          - if @book['rate'] != 0.0
-            .starsidelink{:id => "starsidelink_#{@vol.job_id}", :data => "#{@book['rate']}"}
+              %b
+                = I18n.t(:user_history_viewed_on)
+              = item.updated_at 
+        .col-md-3.controls
           
+          
+          %ul.fa-ul.tools
+            - if (item.user_id == session[:user_id])
+              %li
+                %i.fa.fa-li.fa-trash-o
+                %small
+                  = link_to I18n.t(:delete), {:controller => :user_search_history, :action => :remove_book_history, :volume_id => @vol[:id],
+                     :user_id => item[:user_id],:id => item.id, :page => @page},
+                     :onclick => "return confirmDelete(\"#{I18n.t(:remove_book_from_history_confirm)}\")"
+            %li
+              %i.fa.fa-li.fa-book
+              %small
+                = link_to "#{I18n.t(:book_details_read)}" ,
+                  {:controller => :books, :action => :show, :id => @vol.job_id, :tab => "read"}
+            %li
+              %i.fa.fa-li.fa-info
+              %small
+                = link_to "#{I18n.t(:book_details_details)}" , 
+                  {:controller => :books, :action => :show, :id => @vol.job_id, :tab => nil}    
+          .rate
+            %span.text-muted.pull-right
+              %small
+              = "#{pluralize(@book[:views], I18n.t(:sidelinks_views))} "
+            - if @book['rate'] != 0.0
+              .starsidelink{:id => "starsidelink_#{@vol.job_id}", :data => "#{@book['rate']}"}
             
-      .clearfix
-      %hr
-  - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
-    .col-md-8
-      .pagination-centered
-        - @pages = adjustPaging(@page, @lastPage)
-        = render :partial => "books/paging"
+              
+        .clearfix
+        %hr
+    - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
+      .col-md-8
+        .pagination-centered
+          - @pages = adjustPaging(@page, @lastPage)
+          = render :partial => "books/paging"
+- else
+  %h4
+    = I18n.t(:profile_no_history_found)            
