--- a/app/views/books/_sidepanel.html.haml
+++ b/app/views/books/_sidepanel.html.haml
@@ -6,7 +6,8 @@
     $('.tooltiplogin').tooltipster({ interactive: true, fixedWidth: 280});
     updatedetailedrate();
     $(".averagerate").jRating({
-      isDisabled : true
+      isDisabled : true,
+      bigStarsPath: "/images_#{I18n.locale}/stars_white.png"
     });
   });
   function updateStaticStars(){
@@ -83,14 +84,13 @@
               - @addbookvol = params[:id]  
               =render :partial => "books/add_book"
     .list-group-item
-      #averagerate
-        - rate = @volume.rate
-        - if @volume.rate.nil?
-          - rate = 0.0
-        
-        .averagerate.rate{:style => "float: right", :data => "#{rate}"}
-        %span.text-muted
-          =I18n.t(:book_details_average_rate)
+      - rate = @volume.rate
+      - if @volume.rate.nil?
+        - rate = 0.0
+      .rate
+        .averagerate{:style => "float: right", :data => "#{rate}"}
+      %span.text-muted
+        =I18n.t(:book_details_average_rate)
       #detailedrate
       
       
