--- a/app/views/pages/_sidelinks.html.haml
+++ b/app/views/pages/_sidelinks.html.haml
@@ -1,7 +1,8 @@
 :javascript
   $(document).ready(function(){
     $("#starsidelink_#{page}_#{@vol[:job_id]}").jRating({
-      isDisabled : true
+      isDisabled : true,
+      bigStarsPath: "/images_#{I18n.locale}/stars_grey.png"
     });
   });
   
