--- a/app/views/pages/_top_collections.html.haml
+++ b/app/views/pages/_top_collections.html.haml
@@ -5,7 +5,8 @@
   :javascript
     $(document).ready(function(){
       $("#starsidelink_#{collection.id}").jRating({
-        isDisabled : true
+        isDisabled : true,
+        bigStarsPath: "/images_#{I18n.locale}/stars_white.png"
       });
     });
   - if(collection.photo_name.blank?)
