--- a/app/views/users/_collections.html.haml
+++ b/app/views/users/_collections.html.haml
@@ -9,7 +9,8 @@
       :javascript
         $(document).ready(function(){
           $("#starsidelink_#{item.id}").jRating({
-            isDisabled : true
+            isDisabled : true,
+            bigStarsPath: "/images_#{I18n.locale}/stars_grey.png"
           });
         });
       - if(item.photo_name.blank?)
