--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,7 @@
+= javascript_include_tag 'application'
+= javascript_include_tag 'jquery/jquery.tooltipster.min'
+= stylesheet_link_tag 'jquery/rating/jRating.jquery.css'
+= javascript_include_tag 'jquery/rating/jRating.jquery.js'
 :javascript
   function confirmDelete(text){
     var r = confirm(text);
