--- a/app/views/books/_get_comments.html.haml
+++ b/app/views/books/_get_comments.html.haml
@@ -59,6 +59,8 @@
           .div{:id => "open_reply#{comment.id}",  :style => "display:none"}
             - if logged_in?
               = render :partial => "comments/new_comment",:locals => {:comment_id => comment.id}
+            - if !(logged_in?)
+              = link_to "please login ", {:controller => "users", :action => "login"}
           .div{:id => "reply#{comment.id}"}
             %button.btn.btn-sm.pull-right.btn-default{:onclick => "show_reply('#{comment.id}')"} #{I18n.t(:reply)}
   .clearfix
