--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -49,7 +49,7 @@
           .form-group
             = f.label I18n.t(:username), :class => 'col-sm-2 control-label'
             .col-sm-10
-              = f.text_field :username, { :class => "required form-control"}
+              = f.text_field :username, { :class => "required form-control", :id => "username"}
           - if (@action == "signup")
             .form-group
               = f.label I18n.t(:password) , :class => 'col-sm-2 control-label'
@@ -104,10 +104,10 @@
                 = "#{I18n.t(:upload_photo_max_size_error)} #{UPLOADED_PHOTO_MAX_SIZE} #{I18n.t(:mb)}"
               .invisible_error_msg#photo_ext_error_message
                 = "#{I18n.t(:upload_photo_ext_error)}"
-              = f.file_field :photo_name, {:id => "filefield", :type => "file",:class => "btn btn-default"}
+              = f.file_field :photo_name, {:id => "photo_name", :type => "file",:class => "btn btn-default"}
               %p.help-block #{I18n.t(:max_photo_size)} #{UPLOADED_PHOTO_MAX_SIZE} #{I18n.t(:mb)}
           .form-group
             .col-sm-2
             .col-sm-10
-              = f.submit I18n.t('submit_buton'), :class => "btn btn-primary"
+              = f.submit I18n.t('submit_buton'), :class => "btn btn-primary", :id => "submit"
               = f.submit I18n.t('clear_button'), :class => "btn btn-default",:id => "clear", :type => "reset"
