specs for books comments

--- a/app/views/books/_sidepanel.html.haml
+++ b/app/views/books/_sidepanel.html.haml
@@ -87,8 +87,7 @@
       - rate = @volume.rate
       - if @volume.rate.nil?
         - rate = 0.0
-      .rate
-        .averagerate{:style => "float: right", :data => "#{rate}"}
+      .averagerate.rate{:style => "float: right", :data => "#{rate}"}
       %span.text-muted
         =I18n.t(:book_details_average_rate)
       #detailedrate
