--- a/app/views/users/_activity.html.haml
+++ b/app/views/users/_activity.html.haml
@@ -16,7 +16,17 @@
           %a.pull-left{:href=> "/users/#{@user.id}/profile"}
             = image_tag("#{@thumb}",:class => "media-object img-circle")
           .media-body.activity-log
-            =item[:record].html_safe
+            %p{:style => "line-height:120%;font-size:12px;"}
+              %strong
+                %a.book_author{:href=> "/users/#{@user.id}/profile"} 
+                  = @user.real_name.html_safe
+              = item[:action].html_safe
+              %a.book_title{:href=> item[:object_link]} 
+                = item[:object_name].html_safe
+              = item[:text].html_safe
+              %br
+              %small.text-muted
+                = "#{I18n.t(:log_activity_at)} #{item[:time]}"
         %hr
     - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
       .col-md-8
