--- a/app/views/books/_detailed_rate.html.haml
+++ b/app/views/books/_detailed_rate.html.haml
@@ -1,4 +1,4 @@
 - 5.downto(1) do |n|
-  ="#{pluralize(n.to_i, I18n.t(:book_details_star))}"
+  ="#{I18n.t(:book_details_star, :count => n.to_i)}"
   ="(#{@rate_array[n-1]})"
   %br
