--- a/app/views/books/_sidelinks.html.haml
+++ b/app/views/books/_sidelinks.html.haml
@@ -29,5 +29,5 @@
     .starsidelink{:id => "starsidelink_#{@vol[:job_id]}", :data => "#{@doc['rate']}"}
   %span.text-muted.pull-right
     %small
-      ="#{pluralize(@doc[:views], I18n.t(:sidelinks_views))} "
+      ="#{I18n.t(:sidelinks_views, :count => @doc[:views])} "
 %div
