--- a/app/views/collections/_collectionbooks.html.haml
+++ b/app/views/collections/_collectionbooks.html.haml
@@ -71,7 +71,7 @@
         .rate
           %span.text-muted.pull-right
             %small
-              = "#{I18n.t(:sidelinks_views, :count => @doc[:views])} "
+              = "#{I18n.t(:sidelinks_views, :count => @book[:views])} "
         - if @book['rate'] != 0.0
           .starsidelink{:id => "starsidelink_#{@vol.job_id}", :data => "#{@book['rate']}"}
         
