--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -12,7 +12,7 @@
           .panel-body
             - @user = User.find(item[:user])
             - if(@user.photo_name.blank?)
-              - @thumb = "/images_#{I18n.locale}/user.png"
+              - @thumb = "/images_#{I18n.locale}/#{I18n.t(:default_user)}"
             - else
               - @thumb = @user.photo_name_url(:thumb)
             .media
