--- a/app/views/books/_sidepanel.html.haml
+++ b/app/views/books/_sidepanel.html.haml
@@ -7,7 +7,7 @@
     updatedetailedrate();
     $(".averagerate").jRating({
       isDisabled : true,
-      bigStarsPath: "/images_#{I18n.locale}/stars_white.png"
+      bigStarsPath: "/images_#{I18n.locale}/#{I18n.t(:stars_white)}"
     });
   });
   function updateStaticStars(){
