--- a/app/views/books/get_collections.html.haml
+++ b/app/views/books/get_collections.html.haml
@@ -1,7 +1,7 @@
 - if (@collections != nil && @collections.count > 0)
   - @collections.each do |collection|
     - if(collection.photo_name.blank?)
-      - thumb = "/images_#{I18n.locale}/nocollection140.png"
+      - thumb = "/images_#{I18n.locale}/#{I18n.t(:default_collection)}"
     - else
       - thumb = collection.photo_name_url(:thumb)
     .col-sm-3
