--- a/app/views/collections/_collectionbooks.html.haml
+++ b/app/views/collections/_collectionbooks.html.haml
@@ -13,7 +13,7 @@
       $(document).ready(function(){
         $("#starsidelink_#{@vol.job_id}").jRating({
           isDisabled : true,
-          bigStarsPath: "/images_#{I18n.locale}/stars_grey.png"
+          bigStarsPath: "/images_#{I18n.locale}/#{I18n.t(:stars_grey)}"
         });
       });
     .row.clearfix  
