--- a/app/views/collections/_listresult.html.haml
+++ b/app/views/collections/_listresult.html.haml
@@ -9,11 +9,11 @@
       $(document).ready(function(){
         $("#starsidelink_#{item.id}").jRating({
           isDisabled : true,
-          bigStarsPath: "/images_#{I18n.locale}/stars_white.png"
+          bigStarsPath: "/images_#{I18n.locale}/#{I18n.t(:stars_white)}"
         });
       });
     - if(item.photo_name.blank?)
-      - @thumb = "/images_#{I18n.locale}/nocollection140.png"
+      - @thumb = "/images_#{I18n.locale}/#{I18n.t(:default_collection)}"
     - else
       - @thumb = item.photo_name_url(:thumb)
     .col-md-4
