--- a/app/views/pages/_sidelinks.html.haml
+++ b/app/views/pages/_sidelinks.html.haml
@@ -2,7 +2,7 @@
   $(document).ready(function(){
     $("#starsidelink_#{page}_#{@vol[:job_id]}").jRating({
       isDisabled : true,
-      bigStarsPath: "/images_#{I18n.locale}/stars_grey.png"
+      bigStarsPath: "/images_#{I18n.locale}/#{I18n.t(:stars_grey)}"
     });
   });
   
