--- a/app/views/pages/_top_collections.html.haml
+++ b/app/views/pages/_top_collections.html.haml
@@ -6,11 +6,11 @@
     $(document).ready(function(){
       $("#starsidelink_#{collection.id}").jRating({
         isDisabled : true,
-        bigStarsPath: "/images_#{I18n.locale}/stars_white.png"
+        bigStarsPath: "/images_#{I18n.locale}/#{I18n.t(:stars_white)}"
       });
     });
   - if(collection.photo_name.blank?)
-    - thumb = "/images_#{I18n.locale}/nocollection140.png"
+    - thumb = "/images_#{I18n.locale}/#{I18n.t(:default_collection)}"
   - else
     - thumb = collection.photo_name_url(:thumb)
   .col-md-2.collection
