--- a/app/views/users/_activity.html.haml
+++ b/app/views/users/_activity.html.haml
@@ -9,7 +9,7 @@
       - if !item.nil?
         - @user = User.find(item[:user])
         - if(@user.photo_name.blank?)
-          - @thumb = "/images_#{I18n.locale}/user.png"
+          - @thumb = "/images_#{I18n.locale}/#{I18n.t(:default_user)}"
         - else
           - @thumb = @user.photo_name_url(:thumb)
         .media
