--- a/app/views/users/_collections.html.haml
+++ b/app/views/users/_collections.html.haml
@@ -10,11 +10,11 @@
         $(document).ready(function(){
           $("#starsidelink_#{item.id}").jRating({
             isDisabled : true,
-            bigStarsPath: "/images_#{I18n.locale}/stars_grey.png"
+            bigStarsPath: "/images_#{I18n.locale}/#{I18n.t(:stars_grey)}"
           });
         });
       - if(item.photo_name.blank?)
-        - thumb = "/images_#{I18n.locale}/nocollection140.png"
+        - thumb = "/images_#{I18n.locale}/#{I18n.t(:default_collection)}"
       - else
         - thumb = item.photo_name_url(:thumb)
       .row
