--- a/app/views/users/_get_user_profile_photo.html.haml
+++ b/app/views/users/_get_user_profile_photo.html.haml
@@ -1,6 +1,6 @@
 .col-md-2.column.pull-right
   - if(@user.photo_name.blank?)
-    - thumb = "/images_#{I18n.locale}/user.png"
+    - thumb = "/images_#{I18n.locale}/#{I18n.t(:default_user)}"
     = image_tag("#{thumb}",:class => "img-thumbnail")
   - else
     - thumb = @user.photo_name_url(:thumb)
