--- a/app/views/users/_history.html.haml
+++ b/app/views/users/_history.html.haml
@@ -18,7 +18,7 @@
       - if(@vol[:get_thumbnail_fail] == 0)
         - @thumb = "volumes/#{@vol[:job_id]}/thumb.jpg"
       - else
-        - @thumb = "images_#{I18n.locale}/book_thumb.png"
+        - @thumb = "images_#{I18n.locale}/book_thumb_small.png"
       .row
         .col-md-2
           = link_to image_tag("/#{@thumb}") , {:controller => :books, :action => :show, :id => @vol.job_id, :tab => nil}
