--- a/app/assets/stylesheets/main_ar.sass
+++ b/app/assets/stylesheets/main_ar.sass
@@ -595,7 +595,7 @@ fieldset
 
 /*USER RATING*/
 .starrating
-  background: url("/images_en/userstar.png") 0 0
+  background: url("/images_en/user_star.png") 0 0
   width: 23px
   height: 20px
   display: inline
