--- a/app/views/browse/_chars.html.haml
+++ b/app/views/browse/_chars.html.haml
@@ -30,8 +30,8 @@
   %input.form-control{:id => "browsesearchfield",:type => "text", :style=> "width:400px; margin-top:-5px;", 
   :onkeypress => "if(event.keyCode == 13){searchbrowse(document.getElementById('browsesearchfield').value);return false;}"}
   
-  %a.go.rotate{:href=> "#", :onclick=>"searchbrowse(document.getElementById('browsesearchfield').value);"}
-    %i.fa.fa-arrow-circle-right.fa-2x     
+  %a.go{:href=> "#", :onclick=>"searchbrowse(document.getElementById('browsesearchfield').value);"}
+    %i.fa.fa-arrow-circle-right.fa-2x.rotate     
 .clearfix
 .alphabet  
   %ul.list-inline
