browse all with 3d covers

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -113,7 +113,9 @@ h1, h2, h3, h4
     border-top: 1px dotted #dddddd
   h4 a
     color: #6d4479
-
+  min-height: 165px
+  border-bottom: 1px dotted #dddddd
+  padding: 10px 0px
 h3 a
   color: #6d4479
 
